# ml-from-scratch

./: .pre-commit-config.yaml  pyproject.toml  utils.py
classification/trees/: decision_tree.py  random_forest.py
supervised/classification/: gnb.py  knn.py
supervised/classification/trees/: node.py
supervised/regression/: logit.py  ols.py
unsupervised/: kmeans.py
